--- a/style.css
+++ b/style.css
@@ -76,8 +76,6 @@ body {
   width: 100%;
 }
 
-
-
 .main {
   flex: 1;
   display: flex;
@@ -187,7 +185,7 @@ hr {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.85);
+  background: rgba(0, 0, 0, 0.85);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -216,7 +214,6 @@ hr {
   cursor: pointer;
   transition: 0.2s;
 }
-
 
 @keyframes fadeIn {
   from {
